Now possible to delete blog posts in angular

--- a/angular/app/templates/blog.html
+++ b/angular/app/templates/blog.html
@@ -1,9 +1,14 @@
 <div ng-repeat="post in posts">
   <h3>
     <a href="#/post/1" id="post{{$index }}-link">{{post.header}}</a>
+    <button id="delete{{$index }}-button" ng-click="removeBlogPost( $index )">Remove blog post</button>
   </h3>
   <p>
     {{post.content}}
   </p>
-  <img width="50" ng-src="app/img/{{post.picture}}" alt="{{post.name}}"> {{post.name}} @ {{post.timestamp | date:'yyyy-MM-dd HH:mm:ss Z'}}
+  <img width="50" ng-src="app/img/{{post.picture}}" alt="{{post.name}}"> {{post.name}} @ {{post.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}
+</div>
+
+<div>
+    <button ng-click="removeLastBlogPost()">Remove last blog post</button>
 </div>
